fix: site-header alignment

--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -1,4 +1,5 @@
 .site-header {
+  position: relative;
   flex-wrap: wrap-reverse;
   min-height: 90vh;
   background: url("../../assets/background.png");
